# loggy

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: log.rs  main.rs
