[package]
name = "si-loggy"
version = "0.1.0"
description = "Automatic logging & nohup for arbitrary commands"
repository = "https://github.com/twilligon/loggy"
keywords = ["logs", "logging", "nohup", "setsid", "disown"]
license = "CC0-1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "loggy"
path = "src/main.rs"

[dependencies]
libc = "0.2.185"
memchr = "2.8.0"
polling = "3.11.0"
regex = "1.12.3"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true
panic = "abort"
